examples/type_system/failing/119_fn_missing_parens.flx
fn foo -> Int { 1 }
